:rocket: trying to fix case study url spilling

--- a/src/assets/SCSS/views/programguide/views/editcasestudies.scss
+++ b/src/assets/SCSS/views/programguide/views/editcasestudies.scss
@@ -29,7 +29,7 @@
         font-weight: 900;
         font-size: 30px;
         line-height: 35px;
-        color: #231F20; 
+        color: #231F20;
         //to make the border 
     }
     
@@ -122,25 +122,24 @@
         }
 
         &__inputlinkurl{
-            width: 100%;
+            // width: 100%;
             text-align: left;
             margin-left: 14px;
             color: #231F20;
             & input{
-                width: 100%;
+                // width: 100%;
                 height: 100%;
                 padding: 5px 17px;
             }
             ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
                 opacity: 1; /* Firefox */
             }
-            .v-text-field fieldset, .v-text-field .v-input__control, .v-text-field{
+            .v-text-field fieldset, .v-text-field .v-input__control, .v-text-field .v-input__slot{
                 border-radius: 0px;
             }
             .v-input__slot{
                 height: 41.81px;
                 min-height: 41.81px;
-
                 border: 0.5px solid #231F20;
                 input{
                     font-family: Raleway;
@@ -160,7 +159,7 @@
                 font-size: 17.1097px;
                 line-height: 20px;
                 color: #231F20;
-                width: inherit;
+                // width: inherit;
                 height: inherit;
                 padding: 10px;
             }
